# CVulkan

./: CMakeLists.txt  LICENSE  README.md
lib/glfw/include/GLFW/: glfw3.h
shaders/: build.bat  shader.vert  vert.spv
src/: application.c  application.h  common.h  extensions.c  extensions.h  main.c  utilities.c  utilities.h
src/rendering/: extensions.c  extensions.h  shaders.h  vulkan.c  vulkan.h
src/utility/: string_list.c  string_list.h
